assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');

body{
    font-family: 'Montserrat', sans-serif;
}

body a:hover{
    text-decoration:none;
}

/*--------------------------------------------------------header*/
.nav-background{
    height: 80px;
}

.bg-light{
    background-image: linear-gradient(rgba(120, 88, 110, 0.9), rgba(183, 132, 167, 1), rgba(120, 88, 110, 0.8));
}

.navbar-brand h1{
    margin-top: 5px;
    margin-left: 30px;
    font-size: 36px;
    text-transform: uppercase;
    -o-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.nav-link p{
    margin:auto;
    font-size: 18px;
    font-weight: 500;
    -o-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.navbar-brand h1:hover{
    text-shadow: 5px 5px 4px rgba(129, 75, 112, 1);
}

.nav-link p:hover{
    color: #4b5582;
    text-shadow: 8px 8px 4px rgba(129, 75, 112, 1);
}

.current-link h1,
.current-link p{
    color: #4b5582;
}
/*--------------------------------------------------------Hero area*/

.hero-image{
    background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.2),rgba(255,255,255,1)), url("../images/freelance-kok-kneed-deeg.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.profile-pic{
    position: absolute;
    left: 60%;
    top: 20px;
    z-index: 2;
    background-image:url("../images/freelance-kok-kim.png");
    border: 1px solid #000;
    border-radius: 50%;
    background-repeat: no-repeat;
    background-size: cover;
    box-shadow: 10px 10px 14px 8px rgba(0, 0, 0, 0.4);
}

.hero-text{
    position: relative;
    z-index: 100;
    padding: 0;
    text-transform: uppercase;
    margin-top: 40px;
    color: #ffffff;
    font-weight: 600;
    text-align: center;
    text-shadow: 5px 5px 5px rgba(0,0,0,0.4);
}

/*--------------------------------------------------------main-content-Home*/

.contact-button{
    width: 150px;
    height: 50px;
    border: 1px solid #000000;
    border-radius: 5px;
    padding: 10px 20px;
    text-align: center;
    color: #000000;
    font-size: 20px;
    font-weight: 600;
    cursor: pointer;
    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
    -o-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}
.call-to-action{
    top: -20px;
    margin-bottom: 60px;
    text-align: center;
}

.contact-button:hover{
    background-color: rgba(183, 132, 167, 0.8);
    color: #000000;
}

.referentie{
    border: 1px solid #000;
    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
    margin-bottom: 60px;
}

.referentie-logo-1{
    width: 40px;
    height: 40px;
    background-image: url("../images/ccb-logo.png");
    border: 1px solid #000;
    background-repeat: no-repeat;
    background-size: cover;
    margin-top: 20px;
}

.referentie-logo-2{
    width: 40px;
    height: 40px;
    background-image: url("../images/jeroen-goossens.jpg");
    border: 1px solid #000;
    background-repeat: no-repeat;
    background-size: cover;
    margin-top: 20px;
}

.referentie-titel{
    font-size: 20px;
    margin-top: 20px;
    padding-left: 0px;
}

.referentie-text{
    margin-top: 20px;
}

.background-deco{
    position: absolute;
    top: -350px;
    left: 10px;
    width: 500px;
    height: 600px;
    background-image: url("../images/framboos-transparant.png");
    opacity: 0.2;
    background-size: contain;
    background-repeat: no-repeat;
}

/*--------------------------------------------------------main-content-Over-Kim*/

.text-block-over-kim{
    background-color: #ffffff;
    z-index: 100;
    border: 1px solid #000;
    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
    margin-top: 60px;
    margin-bottom: 100px;
}

.butterfly-background{
    position: absolute;
    background-image: url(../images/transparant-vlinder-dessert.png);
    z-index: 10;
    top: 650px;
    width: 600px;
    height: 600px;
    opacity: 0.5;
    background-size: contain;
    background-repeat: no-repeat;
}

/*--------------------------------------------------------main-content-recipes*/

.recipe-section{
    background-color: #ffffff;
    z-index: 100;
    border: 1px solid #000;
    box-shadow: 1px 3px 10px 4px rgba(0, 0, 0, 0.25);
    margin: 60px 0px 80px 0px;
}

.recipe-title{
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px;
}

.bombes{
    background-image: url(../images/choco-bombes.png);
}

.list-group-item {
    border: none;
    padding: 0px;
}

.list-group{
    margin-bottom: 15px;
}

.ingredients h3{
    padding: 0px 15px 15px 15px;
}

.bereiding-text{
    margin-bottom: 20px;
}

/*--------------------------------------------------------Footer*/
.footer-background{
    height: 60px;
    background-image: linear-gradient(rgba(183, 132, 167, 0),rgba(183, 132, 167, 1), rgba(120, 88, 110, 1));
}

.social-links{
    padding: 15px 20px 10px 5px;
}

.social-links li a i {
    width: 32px;
    height: 32px;
    padding: 12px 0;
    font-size: 15px;
    color: #fafafa;
    border-radius: 50%;
    background: #8f8f8f;
    text-align: center;
    line-height: 7px;
    -o-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    margin-right: 10px;
}

.social-links li a i:hover {
  background: #4b5582;
  box-shadow: 2px 2px 5px 3px rgba(129, 75, 112, 0.6);
}

.copyright{
    padding: 10px;
    margin-top: 10px;
}

.copyright a{
    font-size: 12px;
    color: #4b5582;
    -o-transition: all 0.3s ease-in-out;
    -moz-transition: all 0.3s ease-in-out;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
}

.copyright a:hover{
    text-decoration: none;
    color: #4b5582;
    text-shadow: 8px 8px 4px rgba(129, 75, 112, 1);
}

/*--------------------------------------------------------media queries*/

@media screen and (min-width: 320px){
    .profile-pic{
    width: 100px;
    height: 100px;
    top: 40px;
    }
    .hero-text{
    font-size: 20px;
     }
    .hero-image{
    height: 200px;
    }
    .background-deco{
    width: 300px;
    height: 300px;
    top: -250px;
    left: -50px;
    }
    .social-links{
    padding: 15px 5px 10px 5px;
    }
    .referentie-titel{
    padding-left: 20px;
    }
    .butterfly-background{
    width: 0px;
    height: 0px;
    }
    .recipe-pic{
    position: relative;
    top: -10px;
    width: 300px;
    height: 100px;
    background-size: cover;
    background-repeat: no-repeat;
    }
}

@media screen and (min-width: 720px){
    .profile-pic{
    width: 200px;
    height: 200px;
    }
    .hero-text{
    font-size: 30px;
    }
    .hero-image{
    height: 250px;
    }
    .background-deco{
    top: -300px;
    width: 500px;
    height: 600px; 
    }
    .social-links{
    padding: 15px 20px 10px 5px;
    }
    .butterfly-background{
    width: 400px;
    height: 400px;
    left: -50px;
    }
    .recipe-pic{
    position: relative;
    width: 300px;
    height: 300px;
    background-size: contain;
    background-repeat: no-repeat;
    }
}

@media screen and (max-width: 540px){
    .navbar-brand h1{
    font-size: 20px;
    }
    .nav-background{
    height: 35px;
    }
}

@media screen and (min-width: 992px){
    .profile-pic{
    width: 260px;
    height: 260px;
    }
    .hero-text{
    font-size: 40px;
    }
    .hero-image{
    height: 300px;
    }
    .recipe-pic{
    position: relative;
    width: 200px;
    height: 200px;
    background-size: contain;
    background-repeat: no-repeat;
    }
}

